--- a/ContactPage/contact_us.html
+++ b/ContactPage/contact_us.html
@@ -4,24 +4,40 @@
 <head>
     <link rel="stylesheet" href="contact_us.css">
 
-    <header>
+    <head>
+      <!-- COPY THIS LINE TO THE TOP OF YOUR HTML FILE WITH YOUR OTHER <link> TAGS -->
+      <link
+        rel="stylesheet"
+        href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+      />
+  
+      <!-- COPY THIS LINE DOWN AND PAST TO THE TOP OF YOUR HTML -->
       <nav>
         <ul class="navbar-list">
           <li>
             <a class="nav-link" href="../HomePage/home_page.html">Home</a>
-            <a class="nav-link" href="../MembershipPage/MembershipPageHtml.html">Membership</a>
-            <a class="nav-link" href="../ContactPage/contact_us.html">Contact Us</a>
-            <a class="nav-link" href="../PrivateHirePage/PrivateHirePageHtml.html">Private Hire</a>
+            <a
+              class="nav-link"
+              href="../MembershipPage/MembershipPageHtml.html"
+              >Membership</a
+            >
+            <a class="nav-link" href="../ContactPage/contact_us.html"
+              >Contact Us</a
+            >
+            <a
+              class="nav-link"
+              href="../PrivateHirePage/PrivateHirePageHtml.html"
+              >Private Hire</a
+            >
           </li>
         </ul>
       </nav>
   
       <div class="container-divider">
         <div class="line">
-          <span class="dot"></span>
+          <span class="dot" />
         </div>
       </div>
-    </header>
   
 </head>
 <body>
