Font and field validation updates

--- a/BookingPage/BookingPage.html
+++ b/BookingPage/BookingPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Page</title>
     <link rel="stylesheet" href="BookingPage.css">
-    <h1 class="main-title">BOOKING PAGE</h1>
+    <h1 class="main-title">BOOKINGS</h1>
     <img src="Images/Icons/black_cinema_logo.jpg">
     <nav>
         <ul class="navbar-list">
