--- a/BookingPage/PaymentPage.html
+++ b/BookingPage/PaymentPage.html
@@ -17,16 +17,16 @@
           </div>
           <div class="form-group">
             <label for="card-number">Card number:</label>
-            <input type="text" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx" required maxlength="16">
+            <input type="tel" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx" required minlength="16" maxlength="16">
           </div>
           <div class="form-row">
             <div class="form-group form-group-expiration">
               <label for="expiration-date">Expiration date:</label>
-              <input type="text" id="expiration-date" name="expiration-date" placeholder="MM/YY" required maxlength="5">
+              <input type="tel" id="expiration-date" name="expiration-date" placeholder="MM/YY" required minlength="5" maxlength="5">
             </div>
             <div class="form-group form-group-cvv">
               <label for="cvv">CVV:</label>
-              <input type="text" id="cvv" name="cvv" placeholder="xxx" required maxlength="3">
+              <input type="tel" id="cvv" name="cvv" placeholder="xxx" required minlength="3" maxlength="3">
             </div>
           </div>
           <div class="form-group form-group-image">
