--- a/HomePage/home_page.html
+++ b/HomePage/home_page.html
@@ -4,26 +4,45 @@
     <title>Movie Theater Website</title>
     <link rel="stylesheet" type="text/css" href="home_page.css" />
     
-  </head>
-  <body>
-    <header>
+    <head>
+      <!-- COPY THIS LINE TO THE TOP OF YOUR HTML FILE WITH YOUR OTHER <link> TAGS -->
+      <link
+        rel="stylesheet"
+        href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+      />
+  
+      <!-- COPY THIS LINE DOWN AND PAST TO THE TOP OF YOUR HTML -->
       <nav>
         <ul class="navbar-list">
           <li>
-            <a class="nav-link" href="/">Home</a>
-            <a class="nav-link" href="/">Membership</a>
-            <a class="nav-link" href="/">Contact Us</a>
-            <a class="nav-link" href="/">Private Hire</a>
+            <a class="nav-link" href="../HomePage/home_page.html">Home</a>
+            <a
+              class="nav-link"
+              href="../MembershipPage/MembershipPageHtml.html"
+              >Membership</a
+            >
+            <a class="nav-link" href="../ContactPage/contact_us.html"
+              >Contact Us</a
+            >
+            <a
+              class="nav-link"
+              href="../PrivateHirePage/PrivateHirePageHtml.html"
+              >Private Hire</a
+            >
           </li>
         </ul>
       </nav>
   
       <div class="container-divider">
         <div class="line">
-          <span class="dot"></span>
+          <span class="dot" />
         </div>
       </div>
-    </header>
+
+
+  </head>
+  <body>
+
 
     <main>
       <!-- This code defines a container div with a slider. -->
