--- a/BookingPage/BookingPage.html
+++ b/BookingPage/BookingPage.html
@@ -6,25 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Page</title>
     <link rel="stylesheet" href="BookingPage.css">
+    <link
+    rel="stylesheet"
+    href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+  />
     <h1 class="main-title">BOOKINGS</h1>
     <img src="Images/Icons/black_cinema_logo.jpg">
     <!--Creating the Nav element to display the NavBar links to other important pages of the site-->
     <nav>
         <ul class="navbar-list">
-            <li>
-                <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/">Membership</a>
-                <a class="nav-link" href="/">Contact Us</a>
-                <a class="nav-link" href="/">Private Hire</a>
-            </li>
+          <li>
+            <a class="nav-link" href="../../HomePage/home_page.html">Home</a>
+            <a
+              class="nav-link"
+              href="../../MembershipPage/MembershipPageHtml.html"
+              >Membership</a
+            >
+            <a class="nav-link" href="../../ContactPage/contact_us.html"
+              >Contact Us</a
+            >
+            <a
+              class="nav-link"
+              href="../../PrivateHirePage/PrivateHirePageHtml.html"
+              >Private Hire</a
+            >
+          </li>
         </ul>
-    </nav>
-    <!--Creating the container for the dividing line of the NavBar, helping separate it from the main body-->
-    <div class="container-divider">
+      </nav>
+  <!--Creating the container to hold the dividing line between the navbar and main body-->
+      <div class="container-divider">
         <div class="line">
-            <span class="dot"></span>
+          <span class="dot">
         </div>
-    </div>
+      </div>
     
 </head>
 <body>
