--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
     />
+    <link
+      rel="stylesheet"
+      href="../../SharedComponentsLibrary/WebPageFooter/Footer.css"
+    />
   </head>
   <body>
     <header>
@@ -171,5 +175,54 @@
       </div>
     </main>
     <script src="PrivateHirePage.js"></script>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-column">
+            <h3>Our Company</h3>
+            <ul class="our-company">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Legal</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-column">
+            <h3>Help</h3>
+            <ul class="help">
+              <li><a href="#">FAQ's</a></li>
+              <li><a href="#">Refund Policy</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-column">
+            <h3>Follow Us</h3>
+            <div class="socials">
+              <a class="social" href="https://facebook.com" target="_blank">
+                <ion-icon name="logo-facebook"></ion-icon
+              ></a>
+              <a class="social" href="https://twitter.com" target="_blank"
+                ><ion-icon name="logo-twitter"></ion-icon
+              ></a>
+              <a class="social" href="https://instagram.com" target="_blank"
+                ><ion-icon name="logo-instagram"></ion-icon
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
