--- a/BookingPage/PaymentPage.html
+++ b/BookingPage/PaymentPage.html
@@ -8,6 +8,7 @@
     <script src="PaymentPage.js"></script>
 </head>
 <body>
+  <!--Main body with the container for the payment form-->
     <div class="payment-container">
         <h2 class="payment-heading">Enter your payment details</h2>
         <form onsubmit="confirmPayment()">
@@ -17,20 +18,22 @@
           </div>
           <div class="form-group">
             <label for="card-number">Card number:</label>
-            <input type="text" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx" required maxlength="16">
+            <input type="tel" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx" required minlength="16" maxlength="16">
           </div>
           <div class="form-row">
             <div class="form-group form-group-expiration">
               <label for="expiration-date">Expiration date:</label>
-              <input type="text" id="expiration-date" name="expiration-date" placeholder="MM/YY" required maxlength="5">
+              <input type="tel" id="expiration-date" name="expiration-date" placeholder="MM/YY" required minlength="5" maxlength="5">
             </div>
             <div class="form-group form-group-cvv">
               <label for="cvv">CVV:</label>
-              <input type="text" id="cvv" name="cvv" placeholder="xxx" required maxlength="3">
+              <input type="tel" id="cvv" name="cvv" placeholder="xxx" required minlength="3" maxlength="3">
+              <!--Each input contains placeholder text bar CVV, all input elements are 'required'-->
             </div>
           </div>
           <div class="form-group form-group-image">
             <label for="card-type">Accepted card types:</label>
+            <!--Displays images of accepted card types. pointer events: none as do not want user redirected mid payment-->
             <div class="card-images">
                 <a style="pointer-events: none;" href="http://www.merchantequip.com/information-center/credit-card-logos/"><img
                     src="https://www.merchantequip.com/images/logos/visa-mastercard-211x65.gif" width="211" height="65"
